@@ -90,4 +90,6 @@
 
 /abc/\
 
+"(?(?C)"
+
 # End of testdata/testinput16  
